syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package StreamTest;
//option csharp_namespace = "Server";

service Count {
    rpc GetCountStream (google.protobuf.Empty) returns (stream CountResponse);
}

message CountResponse {
    google.protobuf.Timestamp time_stamp = 1;
    int32 count = 2;
}
